<resources>
    <string name="name">echo</string>
    <string name="title_home">首页</string>
    <string name="title_video">视频</string>
    <string name="title_my">我的</string>
    <string name="mySongList">我的歌单</string>
    <string name="home">首页</string>
    <string name="setting">设置</string>
    <string name="playAll">播放全部</string>
    <string name="play">播放</string>
    <string name="toggle_sort">切换排序方式</string>
    <string name="localMusic">本地音乐</string>
    <string name="historyMusic">历史播放</string>
    <string name="likeMusic">我喜欢的</string>
    <string name="add">立即添加</string>
    <string name="textview">TextView</string>
    <string name="addsongs">添加歌曲</string>
    <string name="editsonglist">编辑歌单</string>
    <string name="cancel">取消</string>
    <string name="search">点此搜索</string>
    <string name="title_info">简介</string>
    <string name="author">2602241712@qq.com</string>
    <string name="app_info">音乐播放软件</string>
    <string name="app_function">音乐软件，支持各大平台非vip歌曲播放</string>
    <string name="app_about">使用kotlin语言开发，基于MVVM模式集成谷歌官方推荐的JetPack组件库大量组件</string>
    <string name="app_statement">本项目仅用于学习用途。</string>
    <string name="app_else">该项目在不断完善中,项目地址请访问：https://gitee.com/k__m/echo_kt</string>
    <string name="matter1">1.除咪咕来源外所有音乐的播放地址是变化的，最短的15分钟变一次，每次打开时请先在首页右上角设置更新播放地址。</string>
    <string name="matter2">2.歪比歪比，歪比巴卜</string>
    <string name="matter3">3.歪比歪比，歪比巴卜</string>
    <string name="matter4">4.歪比歪比，歪比巴卜</string>
    <string name="searchByKeyWord">根据关键字搜索</string>
    <string name="timingClosure">定时关闭</string>
    <string name="floatWindow">悬浮窗</string>
    <string name="countDown">倒计时</string>
    <string name="updatePath">更新所有音频地址</string>
    <string name="other">其他</string>
    <string name="addSonglist">新增歌单</string>
    <string name="albumPic">歌曲封面</string>
    <string name="currentList">当前列表</string>
    <string name="next">下一首</string>
    <string name="updateComplete">更新成功</string>
    <string name="downloadSettings">下载设置</string>
    <string name="tone">音质</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="text_scanLocalSongs">扫描本地歌曲</string>
    <string name="text_playAll">全部播放</string>
    <string name="select_background">从相册选取背景</string>
    <string name="song">歌曲</string>
    <string name="lyric">歌词</string>
    <string name="historyList_null">历史列表空无一物</string>
    <string name="play_all">全部播放</string>
</resources>