<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

<data>
    <variable
        name="onClick"
        type="android.view.View.OnClickListener" />
</data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/list_item_spacing"
    android:paddingTop="@dimen/list_item_spacing"
    android:paddingRight="@dimen/list_item_spacing"
    android:paddingBottom="@dimen/list_item_spacing_half">

    <TextView
        android:id="@+id/tv_sort"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:drawableStart="@mipmap/sort"
        android:gravity="center_vertical"
        android:onClick="@{onClick}"
        android:text="@string/toggle_sort" />

    <TextView
        android:id="@+id/tv_add"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:drawableStart="@mipmap/add_black"
        android:gravity="center_vertical"
        android:onClick="@{onClick}"
        android:text="@string/addsongs" />

    <TextView
        android:id="@+id/tv_edit"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:drawableStart="@mipmap/edit"
        android:gravity="center_vertical"
        android:onClick="@{onClick}"
        android:text="@string/editsonglist" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#00000000"
        android:onClick="@{onClick}"
        android:text="@string/cancel" />
</LinearLayout>
</layout>